--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@ body{
 	
 					<div class="col-md-6">
 						<div class="resume-wrap ftco-animate">
-							<span class="date">Spark Foundation</span>
-							<h2>Web Development and Designing Intern</h2>
+							<span class="date">Web Development and Designing Intern</span>
+							<h2>Spark Foundation</h2>
 							<span class="position">Jan-Feb (2023)</span>
 							<p class="mt-4">Develop a basic banking system to do the transaction . 
 								<ul>
