--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@ body{
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/tanmay-tripathi-362b7b20b/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://github.com/0001tanmay"><span class="icon-github"></span></a></li>
+					  <li class="ftco-animate"><a href="https://x.com/0001_Tanmay?t=5UqGcXTkcqI6rOj8a7JWaw&s=09"><span class="icon-twitter"></span></a></li>
 					</ul>
 				<br>
 		   </div>
