--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ body{
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="https://drive.google.com/file/d/16-kLQREJO8QW3zPe8KVCc82Ta3FE24e-/view?usp=drive_link" class="btn btn-primary py-3 px-3">Resume</a></p>
+								<p><a href="https://drive.google.com/file/d/1d4kw-YDLFZw-W3AqbiZeiOuGEnZK1uZ-/view?usp=drive_link">Resume</a></p>
 							</div>
 					</div>
 				</div>
@@ -605,7 +605,7 @@ body{
 					</a>	
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/16-kLQREJO8QW3zPe8KVCc82Ta3FE24e-/view?usp=drive_link" target="_blank">Resume Click</a></p>
+	            <p><a href="https://drive.google.com/file/d/1d4kw-YDLFZw-W3AqbiZeiOuGEnZK1uZ-/view?usp=drive_link">Resume Click</a></p>
 	          </div>
           </div>
 
