--- a/index.html
+++ b/index.html
@@ -301,9 +301,10 @@ body{
 								<p>I am a BTech graduate majored in Computer Science Engineering. I have an understanding of DSA, Python, OOPs Concepts, HTML/CSS/JS ,ReactJs and Java. I'm really enthusiastic, about starting my career as a Software Developer. I'm actively searching for opportunities to kickstart my journey, learn from experts and make a difference within a forward thinking organization.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Full Stack Developer(MERN).</span></li>
-									<li class="d-flex"><span>Language:</span> <span>Python, HTML, CSS, JavaScript, React &amp; Django.</span></li>
+									<li class="d-flex"><span>Frontend:</span> <span> HTML, CSS, Javascript, React.js</span></li>
+									<li class="d-flex"><span>Backend:</span> <span> Python, SQL, Node.js.</span></li>
 									<li class="d-flex"><span>Web Dev Tools:</span> <span>VScode &amp; Github.</span></li>
-									<li class="d-flex"><span>Cloud/ Database: </span> <span>  MongoDB, SQL &amp; Oracle.</span></li>
+									<li class="d-flex"><span>Database: </span> <span>  MongoDb , Oracle.</span></li>
 									<li class="d-flex"><span>Coursework:</span> <span>Data Structures & Algorithms, Object Oriented Programming, Database Management
 										                   System,Cryptography &amp; Blockchain.</span></li>
 									<li class="d-flex"><span>Interest:</span><span>Traveling &amp; Gaming.</span></li>
