--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ body{
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>React</span> <span class="pull-right">75%</span>
+									<span>Javascript</span> <span class="pull-right">75%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -276,12 +276,12 @@ body{
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
-									<span>Machine Learning</span> <span class="pull-right">80%</span>
+									<span>Typescript</span> <span class="pull-right">70%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
-									<span>Java</span> <span class="pull-right">60%</span>
+									<span>Node.JS</span> <span class="pull-right">75%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
 											aria-valuemax="100"></div>
