--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@ body{
 										<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
+									<span>RUST</span> <span class="pull-right">50%</span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
 								</div>
 							</div>
 						</div>
