--- a/index.html
+++ b/index.html
@@ -291,6 +291,12 @@ body{
 										<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
+									<span>React</span> <span class="pull-right">50%</span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
+									
 								</div>
 							</div>
 						</div>
