--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ body{
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="https://drive.google.com/file/d/1YNwHWPjnpU687PqpoBQUkaCpwo0uN0av/view?usp=drive_link">Resume</a></p>
+								<p><a href="https://drive.google.com/file/d/1MpQHkC9Ok3PTMFFEO82dmwQhxOs1JJTd/view?usp=sharing">Resume</a></p>
 							</div>
 					</div>
 				</div>
@@ -617,7 +617,7 @@ body{
 					</a>	
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1YNwHWPjnpU687PqpoBQUkaCpwo0uN0av/view?usp=drive_link">Resume Click</a></p>
+	            <p><a href="https://drive.google.com/file/d/1MpQHkC9Ok3PTMFFEO82dmwQhxOs1JJTd/view?usp=sharing">Resume Click</a></p>
 	          </div>
           </div>
 
