--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body{
 						
 
 						<br>
-			            <h2>Full Stack Developer(MERN)</h2>
+			            <h2>Web Developer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/tanmay-tripathi-362b7b20b/" target = _blank class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -317,7 +317,7 @@ body{
 
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
-								<p><a href="https://drive.google.com/file/d/1MpQHkC9Ok3PTMFFEO82dmwQhxOs1JJTd/view?usp=sharing">Resume</a></p>
+								<p><a href="https://drive.google.com/file/d/1X3sTF7qfnNddkeW5plWPgfzAq9y3wi8F/view?usp=drive_link">Resume</a></p>
 							</div>
 					</div>
 				</div>
@@ -608,7 +608,7 @@ body{
 					</a>	
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1MpQHkC9Ok3PTMFFEO82dmwQhxOs1JJTd/view?usp=sharing">Resume Click</a></p>
+	            <p><a href="https://drive.google.com/file/d/1X3sTF7qfnNddkeW5plWPgfzAq9y3wi8F/view?usp=drive_link">Resume Click</a></p>
 	          </div>
           </div>
 
